graph-explorer/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graph-explorer
spec:
  selector:
    app: graph-explorer
  ports:
    - port: 80
      targetPort: 4000
